[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-telemetry"
version = "0.1.0"
description = "Parse and visualize IBM Quantum telemetry JSON results"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
quantum-telemetry = "quantum_telemetry.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
